cambio de rutas y mapa del formulario

--- a/form/contact.html
+++ b/form/contact.html
@@ -168,7 +168,7 @@
 
 
         <div data-layer="navigation" class="Navigation3">
-          <a href="/index.html" data-layer="Secondary BTN" class="SecondaryBtn">
+          <a href="../index.html" data-layer="Secondary BTN" class="SecondaryBtn">
             <div data-layer="Button Text" class="ButtonTextWhite">
               Anterior
             </div>
@@ -275,7 +275,7 @@
 </script>
 
 
-  <script src="/assets/guardado.js"></script>
+  <script src="../assets/guardado.js"></script>
 </body>
 
 </html>
