--- a/form/step6.html
+++ b/form/step6.html
@@ -55,6 +55,8 @@
         <div data-layer="texto_modal" class="TextoModal">
           <div data-layer="text" class="Titulo">
             Su información ha sido enviada con éxito.</div>
+            <br>
+             <a href="https://datalpine.mx/exploradores/" class="BtnFinal">Finalizar</a>
         </div>
       </div>
     </div>
