--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500;700&display=swap" rel="stylesheet" />
 
-  <link rel="stylesheet" href="/assets/style.css" />
+  <link rel="stylesheet" href="assets/style.css" />
   <script src="main.js"></script>
 </head>
 
@@ -20,8 +20,8 @@
     <div data-layer="header" class="Header">
       <div data-layer="logo" class="Logo">
         <div data-layer="datalpine" class="Datalpine">
-          <img data-layer="logo_image" class="LogoImage" src="..\tools\logo.png" />
-          <img data-layer="DatLogo" class="Datlogo" src="..\tools\DatLogo.png" />
+          <img data-layer="logo_image" class="LogoImage" src="tools\logo.png" />
+          <img data-layer="DatLogo" class="Datlogo" src="tools\DatLogo.png" />
         </div>
       </div>
       <a href="https://datalpine.mx/exploradores/" data-layer="Primary BTN" class="PrimaryBtn">
@@ -42,7 +42,7 @@
         ofreciendo análisis de precios y recomendaciones para maximizar
         ingresos y reducir el tiempo de venta.
       </div>
-      <a href="/form/contact.html" data-layer="iniciar" class="Iniciar">INICIAR EXPLORADOR</a>
+      <a href="https://dataalpine.mx/ExploradorForm/form/contact.html" data-layer="iniciar" class="Iniciar">INICIAR EXPLORADOR</a>
     </div>
   </div>
 </body>
