--- a/form/step3_casa.html
+++ b/form/step3_casa.html
@@ -299,46 +299,216 @@
                     <div data-layer="content" class="Content">
                       <div data-layer="tags" class="Tags">
                         <div data-layer="badge" class="Badge">
-                          <div data-layer="tag" class="Tag">
-                            <div data-layer="placeholder" class="PlaceholderT">
-                              <input type="checkbox" id="amenidad_piscina" name="amenidad_piscina" />
-                              <label for="amenidad_piscina">Piscina</label>
-                            </div>
-                          </div>
-                        </div>
-                        <div data-layer="badge" class="Badge">
-                          <div data-layer="tag" class="Tag">
-                            <div data-layer="placeholder" class="Placeholder">
-                              <input type="checkbox" id="amenidad_jardin" name="amenidad_jardin" />
-                              <label for="amenidad_jardin">Jardín</label>
-                            </div>
-                          </div>
-                        </div>
+  <div data-layer="tag" class="Tag">
+    <div data-layer="placeholder" class="Placeholder">
+      <input type="checkbox" id="amenidad_amueblado" name="amenidad_amueblado" />
+      <label for="amenidad_amueblado">Amueblado</label>
+    </div>
+  </div>
+</div>
+<div data-layer="badge" class="Badge">
+  <div data-layer="tag" class="Tag">
+    <div data-layer="placeholder" class="Placeholder">
+      <input type="checkbox" id="amenidad_cocina_integral" name="amenidad_cocina_integral" />
+      <label for="amenidad_cocina_integral">Cocina Integral</label>
+    </div>
+  </div>
+</div>
+<div data-layer="badge" class="Badge">
+  <div data-layer="tag" class="Tag">
+    <div data-layer="placeholder" class="Placeholder">
+      <input type="checkbox" id="amenidad_aire_acondicionado" name="amenidad_aire_acondicionado" />
+      <label for="amenidad_aire_acondicionado">Aire acondicionado</label>
+    </div>
+  </div>
+</div>
+<div data-layer="badge" class="Badge">
+  <div data-layer="tag" class="Tag">
+    <div data-layer="placeholder" class="Placeholder">
+      <input type="checkbox" id="amenidad_sotano" name="amenidad_sotano" />
+      <label for="amenidad_sotano">Sótano</label>
+    </div>
+  </div>
+</div>
 
-                        <div data-layer="badge" class="Badge">
-                          <div data-layer="tag" class="Tag">
-                            <div data-layer="placeholder" class="Placeholder">
-                              <input type="checkbox" id="amenidad_balcon1" name="amenidad_balcon1" />
-                              <label for="amenidad_balcon1">Balcón</label>
-                            </div>
-                          </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
 
-                        </div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+                            <div data-layer="input_amenities" class="InputAmenidades">
+                <div data-layer="input_content" class="InputContentAme">
+                  <div data-layer="input" class="InputAm">
+                    <div data-layer="content" class="Content">
+                      <div data-layer="tags" class="Tags">
                         <div data-layer="badge" class="Badge">
-                          <div data-layer="tag" class="Tag">
-                            <div data-layer="placeholder" class="Placeholder">
-                              <input type="checkbox" id="amenidad_balcon2" name="amenidad_balcon2" />
-                              <label for="amenidad_balcon2">Balcón</label>
-                            </div>
-                          </div>
-                        </div>
+ <div data-layer="badge" class="Badge">
+  <div data-layer="tag" class="Tag">
+    <div data-layer="placeholder" class="Placeholder">
+      <input type="checkbox" id="amenidad_area_lavado" name="amenidad_area_lavado" />
+      <label for="amenidad_area_lavado">Área lavado</label>
+    </div>
+  </div>
+</div>
+<div data-layer="badge" class="Badge">
+  <div data-layer="tag" class="Tag">
+    <div data-layer="placeholder" class="Placeholder">
+      <input type="checkbox" id="amenidad_roofgarden" name="amenidad_roofgarden" />
+      <label for="amenidad_roofgarden">Roof Garden</label>
+    </div>
+  </div>
+</div>
+<div data-layer="badge" class="Badge">
+  <div data-layer="tag" class="Tag">
+    <div data-layer="placeholder" class="Placeholder">
+      <input type="checkbox" id="amenidad_estudio" name="amenidad_estudio" />
+      <label for="amenidad_estudio">Estudio</label>
+    </div>
+  </div>
+</div>
+<div data-layer="badge" class="Badge">
+  <div data-layer="tag" class="Tag">
+    <div data-layer="placeholder" class="Placeholder">
+      <input type="checkbox" id="amenidad_terraza" name="amenidad_terraza" />
+      <label for="amenidad_terraza">Terraza</label>
+    </div>
+  </div>
+</div>
+<div data-layer="badge" class="Badge">
+  <div data-layer="tag" class="Tag">
+    <div data-layer="placeholder" class="Placeholder">
+      <input type="checkbox" id="amenidad_jacuzzi" name="amenidad_jacuzzi" />
+      <label for="amenidad_jacuzzi">Jacuzzi</label>
+    </div>
+  </div>
+</div>
+
+
+
+
+
                       </div>
                     </div>
                   </div>
                 </div>
               </div>
             </div>
+
+
+
+
+
+
+
+                          <div data-layer="input_amenities" class="InputAmenidades">
+                <div data-layer="input_content" class="InputContentAme">
+                  <div data-layer="input" class="InputAm">
+                    <div data-layer="content" class="Content">
+                      <div data-layer="tags" class="Tags">
+                        <div data-layer="badge" class="Badge">
+
+<div data-layer="badge" class="Badge">
+  <div data-layer="tag" class="Tag">
+    <div data-layer="placeholder" class="Placeholder">
+      <input type="checkbox" id="amenidad_gimnasio" name="amenidad_gimnasio" />
+      <label for="amenidad_gimnasio">Gimnasio</label>
+    </div>
+  </div>
+</div>
+
+<div data-layer="badge" class="Badge">
+  <div data-layer="tag" class="Tag">
+    <div data-layer="placeholder" class="Placeholder">
+      <input type="checkbox" id="amenidad_bodega" name="amenidad_bodega" />
+      <label for="amenidad_bodega">Bodega</label>
+    </div>
+  </div>
+</div>
+<div data-layer="badge" class="Badge">
+  <div data-layer="tag" class="Tag">
+    <div data-layer="placeholder" class="Placeholder">
+      <input type="checkbox" id="amenidad_areas_verdes" name="amenidad_areas_verdes" />
+      <label for="amenidad_areas_verdes">Áreas Verdes</label>
+    </div>
+  </div>
+</div>
+<div data-layer="badge" class="Badge">
+  <div data-layer="tag" class="Tag">
+    <div data-layer="placeholder" class="Placeholder">
+      <input type="checkbox" id="amenidad_areas_infantiles" name="amenidad_areas_infantiles" />
+      <label for="amenidad_areas_infantiles">Áreas Infantiles</label>
+    </div>
+  </div>
+</div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+
+
+
+
+
           </div>
+
+
+
+
+
+
+                            <div data-layer="input_amenities" class="InputAmenidades">
+                <div data-layer="input_content" class="InputContentAme">
+                  <div data-layer="input" class="InputAm">
+                    <div data-layer="content" class="Content">
+                      <div data-layer="tags" class="Tags">
+                        <div data-layer="badge" class="Badge">
+ <div data-layer="badge" class="Badge">
+  <div data-layer="tag" class="Tag">
+    <div data-layer="placeholder" class="Placeholder">
+      <input type="checkbox" id="amenidad_elevador" name="amenidad_elevador" />
+      <label for="amenidad_elevador">Elevador</label>
+    </div>
+  </div>
+</div>
+<div data-layer="badge" class="Badge">
+  <div data-layer="tag" class="Tag">
+    <div data-layer="placeholder" class="Placeholder">
+      <input type="checkbox" id="amenidad_seguridad" name="amenidad_seguridad" />
+      <label for="amenidad_seguridad">Seguridad</label>
+    </div>
+  </div>
+</div>
+
+
+
+
+
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+
+
+
+
+
           <div data-layer="step" class="StepTerreno PrecioStep">
             <div data-layer="precio" class="Precio">
               <div data-layer="titulo" class="Titulo">
@@ -419,16 +589,12 @@
 
     const opcionales = ["Estacionamiento", "mediobano"];
 
-    // Nuevo: Referencia al select EstadoCasa
     const estadoCasaSelect = document.getElementById("EstadoCasa");
-
-    // Cargar valor guardado para EstadoCasa si existe
     const savedEstadoCasa = sessionStorage.getItem("EstadoCasa");
     if (savedEstadoCasa) {
       estadoCasaSelect.value = savedEstadoCasa;
     }
 
-    // Guardar EstadoCasa al cambiar valor
     estadoCasaSelect.addEventListener("change", () => {
       sessionStorage.setItem("EstadoCasa", estadoCasaSelect.value);
     });
@@ -461,7 +627,16 @@
           } else {
             input.classList.add("input-error");
           }
-        } else if (["mTerreno", "mConstruccion", "Recamaras", "Estacionamiento", "Banos", "mediobano"].includes(key)) {
+        } else if (["mTerreno", "mConstruccion"].includes(key)) {
+          value = value.replace(/\D/g, "");
+          input.value = value;
+          const num = parseInt(value, 10);
+          if (!isNaN(num) && num >= 25 && num <= 2000) {
+            input.classList.remove("input-error");
+          } else {
+            input.classList.add("input-error");
+          }
+        } else if (["Recamaras", "Estacionamiento", "Banos", "mediobano"].includes(key)) {
           value = value.replace(/\D/g, "");
           input.value = value;
         }
@@ -510,6 +685,15 @@
             }
           }
 
+          if (["mTerreno", "mConstruccion"].includes(key)) {
+            const num = parseInt(value, 10);
+            if (isNaN(num) || num < 25 || num > 2000) {
+              input.classList.add("input-error");
+              allValid = false;
+              continue;
+            }
+          }
+
           if (!esOpcional && !input.checkValidity()) {
             input.classList.add("input-error");
             allValid = false;
@@ -527,7 +711,6 @@
           sessionStorage.setItem(key, formFields[key].value.trim());
         }
 
-        // Guardar EstadoCasa al hacer click en siguiente también
         sessionStorage.setItem("EstadoCasa", estadoCasaSelect.value);
 
         window.location.href = "/form/step4.html";
@@ -535,6 +718,7 @@
     }
   });
 </script>
+
 
 
 
