--- a/form/step3_casa.html
+++ b/form/step3_casa.html
@@ -9,7 +9,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500;700&display=swap" rel="stylesheet" />
 
-  <link rel="stylesheet" href="/assets/style.css" />
+  <link rel="stylesheet" href="../assets/style.css" />
 
   <title>Document</title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" />
@@ -299,217 +299,175 @@
                     <div data-layer="content" class="Content">
                       <div data-layer="tags" class="Tags">
                         <div data-layer="badge" class="Badge">
-  <div data-layer="tag" class="Tag">
-    <div data-layer="placeholder" class="Placeholder">
-      <input type="checkbox" id="amenidad_amueblado" name="amenidad_amueblado" />
-      <label for="amenidad_amueblado">Amueblado</label>
-    </div>
-  </div>
-</div>
-<div data-layer="badge" class="Badge">
-  <div data-layer="tag" class="Tag">
-    <div data-layer="placeholder" class="Placeholder">
-      <input type="checkbox" id="amenidad_cocina_integral" name="amenidad_cocina_integral" />
-      <label for="amenidad_cocina_integral">Cocina Integral</label>
-    </div>
-  </div>
-</div>
-<div data-layer="badge" class="Badge">
-  <div data-layer="tag" class="Tag">
-    <div data-layer="placeholder" class="Placeholder">
-      <input type="checkbox" id="amenidad_aire_acondicionado" name="amenidad_aire_acondicionado" />
-      <label for="amenidad_aire_acondicionado">Aire acondicionado</label>
-    </div>
-  </div>
-</div>
-<div data-layer="badge" class="Badge">
-  <div data-layer="tag" class="Tag">
-    <div data-layer="placeholder" class="Placeholder">
-      <input type="checkbox" id="amenidad_sotano" name="amenidad_sotano" />
-      <label for="amenidad_sotano">Sótano</label>
-    </div>
-  </div>
-</div>
+                          <div data-layer="tag" class="Tag">
+                            <div data-layer="placeholder" class="Placeholder">
+                              <input type="checkbox" id="amenidad_amueblado" name="amenidad_amueblado" />
+                              <label for="amenidad_amueblado">Amueblado</label>
+                            </div>
+                          </div>
+                        </div>
+                        <div data-layer="badge" class="Badge">
+                          <div data-layer="tag" class="Tag">
+                            <div data-layer="placeholder" class="Placeholder">
+                              <input type="checkbox" id="amenidad_cocina_integral" name="amenidad_cocina_integral" />
+                              <label for="amenidad_cocina_integral">Cocina Integral</label>
+                            </div>
+                          </div>
+                        </div>
+                        <div data-layer="badge" class="Badge">
+                          <div data-layer="tag" class="Tag">
+                            <div data-layer="placeholder" class="Placeholder">
+                              <input type="checkbox" id="amenidad_aire_acondicionado" name="amenidad_aire_acondicionado" />
+                              <label for="amenidad_aire_acondicionado">Aire acondicionado</label>
+                            </div>
+                          </div>
+                        </div>
+                        <div data-layer="badge" class="Badge">
+                          <div data-layer="tag" class="Tag">
+                            <div data-layer="placeholder" class="Placeholder">
+                              <input type="checkbox" id="amenidad_sotano" name="amenidad_sotano" />
+                              <label for="amenidad_sotano">Área lavado</label>
+                            </div>
+                          </div>
+                        </div>
 
                       </div>
                     </div>
+                    
                   </div>
+                  
                 </div>
               </div>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-                            <div data-layer="input_amenities" class="InputAmenidades">
+              <div data-layer="input_amenities" class="InputAmenidades">
                 <div data-layer="input_content" class="InputContentAme">
                   <div data-layer="input" class="InputAm">
                     <div data-layer="content" class="Content">
                       <div data-layer="tags" class="Tags">
                         <div data-layer="badge" class="Badge">
- <div data-layer="badge" class="Badge">
-  <div data-layer="tag" class="Tag">
-    <div data-layer="placeholder" class="Placeholder">
-      <input type="checkbox" id="amenidad_area_lavado" name="amenidad_area_lavado" />
-      <label for="amenidad_area_lavado">Área lavado</label>
-    </div>
-  </div>
-</div>
-<div data-layer="badge" class="Badge">
-  <div data-layer="tag" class="Tag">
-    <div data-layer="placeholder" class="Placeholder">
-      <input type="checkbox" id="amenidad_roofgarden" name="amenidad_roofgarden" />
-      <label for="amenidad_roofgarden">Roof Garden</label>
-    </div>
-  </div>
-</div>
-<div data-layer="badge" class="Badge">
-  <div data-layer="tag" class="Tag">
-    <div data-layer="placeholder" class="Placeholder">
-      <input type="checkbox" id="amenidad_estudio" name="amenidad_estudio" />
-      <label for="amenidad_estudio">Estudio</label>
-    </div>
-  </div>
-</div>
-<div data-layer="badge" class="Badge">
-  <div data-layer="tag" class="Tag">
-    <div data-layer="placeholder" class="Placeholder">
-      <input type="checkbox" id="amenidad_terraza" name="amenidad_terraza" />
-      <label for="amenidad_terraza">Terraza</label>
-    </div>
-  </div>
-</div>
-<div data-layer="badge" class="Badge">
-  <div data-layer="tag" class="Tag">
-    <div data-layer="placeholder" class="Placeholder">
-      <input type="checkbox" id="amenidad_jacuzzi" name="amenidad_jacuzzi" />
-      <label for="amenidad_jacuzzi">Jacuzzi</label>
-    </div>
-  </div>
-</div>
-
-
-
-
-
+                          <div data-layer="badge" class="Badge">
+                            <div data-layer="tag" class="Tag">
+                              <div data-layer="placeholder" class="Placeholder">
+                                <input type="checkbox" id="amenidad_area_lavado" name="amenidad_area_lavado" />
+                                <label for="amenidad_area_lavado">Estudio</label>
+                              </div>
+                            </div>
+                          </div>
+                          <div data-layer="badge" class="Badge">
+                            <div data-layer="tag" class="Tag">
+                              <div data-layer="placeholder" class="Placeholder">
+                                <input type="checkbox" id="amenidad_roofgarden" name="amenidad_roofgarden" />
+                                <label for="amenidad_roofgarden">Terraza</label>
+                              </div>
+                            </div>
+                          </div>
+                          <div data-layer="badge" class="Badge">
+                            <div data-layer="tag" class="Tag">
+                              <div data-layer="placeholder" class="Placeholder">
+                                <input type="checkbox" id="amenidad_estudio" name="amenidad_estudio" />
+                                <label for="amenidad_estudio">Piscina</label>
+                              </div>
+                            </div>
+                          </div>
+                          <div data-layer="badge" class="Badge">
+                            <div data-layer="tag" class="Tag">
+                              <div data-layer="placeholder" class="Placeholder">
+                                <input type="checkbox" id="amenidad_terraza" name="amenidad_terraza" />
+                                <label for="amenidad_terraza">Jacuzzi</label>
+                              </div>
+                            </div>
+                          </div>
+                          <div data-layer="badge" class="Badge">
+                            <div data-layer="tag" class="Tag">
+                              <div data-layer="placeholder" class="Placeholder">
+                                <input type="checkbox" id="amenidad_jacuzzi" name="amenidad_jacuzzi" />
+                                <label for="amenidad_jacuzzi">Roof Garden</label>
+                              </div>
+                            </div>
+                          </div>
                       </div>
                     </div>
                   </div>
                 </div>
               </div>
-            </div>
-
-
-
-
-
-
-
-                          <div data-layer="input_amenities" class="InputAmenidades">
+              </div>
+              <div data-layer="input_amenities" class="InputAmenidades">
                 <div data-layer="input_content" class="InputContentAme">
                   <div data-layer="input" class="InputAm">
                     <div data-layer="content" class="Content">
                       <div data-layer="tags" class="Tags">
                         <div data-layer="badge" class="Badge">
+                          <div data-layer="tag" class="Tag">
+                            <div data-layer="placeholder" class="Placeholder">
+                              <input type="checkbox" id="amenidad_gimnasio" name="amenidad_gimnasio" />
+                              <label for="amenidad_gimnasio">Gimnasio</label>
+                            </div>
+                          </div>
+                        </div>
 
-<div data-layer="badge" class="Badge">
-  <div data-layer="tag" class="Tag">
-    <div data-layer="placeholder" class="Placeholder">
-      <input type="checkbox" id="amenidad_gimnasio" name="amenidad_gimnasio" />
-      <label for="amenidad_gimnasio">Gimnasio</label>
-    </div>
-  </div>
-</div>
-
-<div data-layer="badge" class="Badge">
-  <div data-layer="tag" class="Tag">
-    <div data-layer="placeholder" class="Placeholder">
-      <input type="checkbox" id="amenidad_bodega" name="amenidad_bodega" />
-      <label for="amenidad_bodega">Bodega</label>
-    </div>
-  </div>
-</div>
-<div data-layer="badge" class="Badge">
-  <div data-layer="tag" class="Tag">
-    <div data-layer="placeholder" class="Placeholder">
-      <input type="checkbox" id="amenidad_areas_verdes" name="amenidad_areas_verdes" />
-      <label for="amenidad_areas_verdes">Áreas Verdes</label>
-    </div>
-  </div>
-</div>
-<div data-layer="badge" class="Badge">
-  <div data-layer="tag" class="Tag">
-    <div data-layer="placeholder" class="Placeholder">
-      <input type="checkbox" id="amenidad_areas_infantiles" name="amenidad_areas_infantiles" />
-      <label for="amenidad_areas_infantiles">Áreas Infantiles</label>
-    </div>
-  </div>
-</div>
+                        <div data-layer="badge" class="Badge">
+                          <div data-layer="tag" class="Tag">
+                            <div data-layer="placeholder" class="Placeholder">
+                              <input type="checkbox" id="amenidad_bodega" name="amenidad_bodega" />
+                              <label for="amenidad_bodega">Sótano</label>
+                            </div>
+                          </div>
+                        </div>
+                        <div data-layer="badge" class="Badge">
+                          <div data-layer="tag" class="Tag">
+                            <div data-layer="placeholder" class="Placeholder">
+                              <input type="checkbox" id="amenidad_areas_verdes" name="amenidad_areas_verdes" />
+                              <label for="amenidad_areas_verdes">Bodega</label>
+                            </div>
+                          </div>
+                        </div>
+                        <div data-layer="badge" class="Badge">
+                          <div data-layer="tag" class="Tag">
+                            <div data-layer="placeholder" class="Placeholder">
+                              <input type="checkbox" id="amenidad_areas_infantiles" name="amenidad_areas_infantiles" />
+                              <label for="amenidad_areas_infantiles">Áreas Verdes</label>
+                            </div>
+                          </div>
+                        </div>
                       </div>
                     </div>
                   </div>
                 </div>
               </div>
-
-
-
-
-
-          </div>
-
-
-
-
-
-
-                            <div data-layer="input_amenities" class="InputAmenidades">
+              <div data-layer="input_amenities" class="InputAmenidades">
                 <div data-layer="input_content" class="InputContentAme">
                   <div data-layer="input" class="InputAm">
                     <div data-layer="content" class="Content">
                       <div data-layer="tags" class="Tags">
                         <div data-layer="badge" class="Badge">
- <div data-layer="badge" class="Badge">
-  <div data-layer="tag" class="Tag">
-    <div data-layer="placeholder" class="Placeholder">
-      <input type="checkbox" id="amenidad_elevador" name="amenidad_elevador" />
-      <label for="amenidad_elevador">Elevador</label>
-    </div>
-  </div>
-</div>
-<div data-layer="badge" class="Badge">
-  <div data-layer="tag" class="Tag">
-    <div data-layer="placeholder" class="Placeholder">
-      <input type="checkbox" id="amenidad_seguridad" name="amenidad_seguridad" />
-      <label for="amenidad_seguridad">Seguridad</label>
-    </div>
-  </div>
-</div>
-
-
-
-
-
+                          <div data-layer="tag" class="Tag">
+                            <div data-layer="placeholder" class="Placeholder">
+                              <input type="checkbox" id="amenidad_elevador" name="amenidad_elevador" />
+                              <label for="amenidad_elevador">Áreas Infantiles</label>
+                            </div>
+                          </div>
+                        </div>
+                        <div data-layer="badge" class="Badge">
+                          <div data-layer="tag" class="Tag">
+                            <div data-layer="placeholder" class="Placeholder">
+                              <input type="checkbox" id="amenidad_seguridad" name="amenidad_seguridad" />
+                              <label for="amenidad_seguridad">Elevador</label>
+                            </div>
+                          </div>
+                        </div>
+                        <div data-layer="badge" class="Badge">
+                          <div data-layer="tag" class="Tag">
+                            <div data-layer="placeholder" class="Placeholder">
+                              <input type="checkbox" id="amenidad_seguridad" name="amenidad_seguridad" />
+                              <label for="amenidad_seguridad">Seguridad</label>
+                            </div>
+                          </div>
+                        </div>
                       </div>
                     </div>
                   </div>
                 </div>
               </div>
-            </div>
-
-
-
-
-
-          <div data-layer="step" class="StepTerreno PrecioStep">
+            <div data-layer="step" class="StepTerreno PrecioStep">
             <div data-layer="precio" class="Precio">
               <div data-layer="titulo" class="Titulo">
                 <div data-layer="titulo_text" class="Nombre">
@@ -528,7 +486,7 @@
         </div>
       </div>
       <div data-layer="navigation" class="Navigation">
-        <a href="/form/step2.html" data-layer="Secondary BTN" class="SecondaryBtn">
+        <a href="step2.html" data-layer="Secondary BTN" class="SecondaryBtn">
           <div data-layer="Button Text" class="ButtonTextWhite">Anterior</div>
         </a>
         <a href="#" data-layer="Primary BTN" id="btnSiguiente" class="PrimaryBtn">
@@ -713,7 +671,7 @@
 
         sessionStorage.setItem("EstadoCasa", estadoCasaSelect.value);
 
-        window.location.href = "/form/step4.html";
+        window.location.href = "step4.html";
       });
     }
   });
